# Jaba

./: .gitignore  Bin  Include  Jaba.java  Lib  README.md  generate.bat  lwjgl.dll.git  lwjgl.dll.sha1
VKWrap/: Bin  Include  JabaClass.java  Lib  VKWrap.h  VKWrap.java  VkDeviceCreateInfoWrap.java  jniJabaClass.cpp  jniJabaClass.h  jniVkDeviceCreateInfoWrap.cpp  jniVkDeviceCreateInfoWrap.h  jnijavacpp.cpp  windows-x86_64
VKWrap/windows-x86_64/: Bin  Include  Lib  jniJabaClass.lib  jniVKWrap.exp  jniVKWrap.lib  jniVkDeviceCreateInfoWrap.lib
class/VKWrap/: VKWrap.h
native/Jaba/: CMakeLists.txt
native/Jaba/VKWrap/: CMakeLists.txt  VKWrap.h  jniJabaClass.cpp  jniJabaClass.h  jnijavacpp.cpp
src/: Jaba.java  lwjgl.dll.git  lwjgl.dll.sha1
